corrected navbar alignment

--- a/portfolio/src/components/navbar/Navbar.css
+++ b/portfolio/src/components/navbar/Navbar.css
@@ -11,15 +11,18 @@
     padding: 0;
     text-decoration: none;
     color: black;
+    align-items: center;
+
 }
 
 nav ul {
     display: flex;
     list-style-type: none;
     justify-content: center;
+    margin-left: 60%;
 }
     
-.links li a, .blog-link li a {
+.links li a {
     text-decoration: none;
     color: black;
     padding: 15px 45px;
